--- a/css/style.css
+++ b/css/style.css
@@ -267,8 +267,8 @@ a:focus {
         position: absolute;
         width: 100%;
         top: 40px;
-        background: transparent !important;
-        /*border-bottom: 1px solid rgba(255, 255, 255, .3);*/ 
+        background: transparent(65, 36, 36) !important;
+        border-bottom: 1px solid rgba(255, 255, 255, .3);
         z-index: 9;
         text-align: center;
     }
@@ -287,6 +287,110 @@ a:focus {
     }
 }
 
+@media (min-width: 991.98px) {
+    .navbar {
+        position: absolute;
+        width: 100%;
+        top: 40px;
+        padding: 14px 35px;
+        background: transparent !important;
+        border-bottom: 1px solid rgba(255, 255, 255, .3);
+        z-index: 9;
+        text-align:center;
+    }
+    
+    .navbar.nav-sticky {
+        /* padding: 10px 60px; */
+        background: white !important;
+        border-bottom: none;
+    }
+    
+    .page .navbar {
+        background: #20212B !important;
+    }
+    
+    .navbar a.nav-link {
+        padding: 8px 15px;
+        font-size: 16px;
+        letter-spacing: 1px;
+    }
+    
+    .img1{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 40%;
+    }
+}
+
+@media (max-width: 991.98px) {   
+    .navbar {
+        padding: 10px;
+        background: white !important;
+        text-align: center;
+    }
+    
+    .navbar a.nav-link {
+        padding: 5px;
+    }
+    
+    .navbar .dropdown-menu {
+        box-shadow: none;
+    }
+    
+    .img1{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 20%;
+    }
+}
+@media (max-width: 767.98px) {   
+    .navbar {
+        padding: 8px;
+        background: white !important;
+        text-align: center;
+    }
+    
+    .navbar a.nav-link {
+        padding: 5px;
+    }
+    
+    .navbar .dropdown-menu {
+        box-shadow: none;
+    }
+    
+    .img1{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 15%;
+    }
+}
+
+
+@media (max-width: 575.98px) {   
+    .navbar {
+        padding: 8px;
+        background: white !important;
+        text-align: center;
+    }
+    
+    .navbar a.nav-link {
+        padding: 5px;
+    }
+    
+    .navbar .dropdown-menu {
+        box-shadow: none;
+    }
+    
+    .img1{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 15%;
+    }
+}
 
 /*******************************/
 /********** Hero CSS ***********/
@@ -317,7 +421,7 @@ a:focus {
     position: relative;
     width: 100%;
     height: 100%;
-    min-height: 300px;
+    min-height: 400px;
     text-align: right;
     overflow: hidden;
 }
@@ -331,6 +435,7 @@ a:focus {
     left: 0;
     background: rgba(0, 0, 0, .5);
     z-index: 1;
+    display: none;
 }
 
 .carousel .carousel-img img {
@@ -341,19 +446,35 @@ a:focus {
 
 .carousel .carousel-text {
     position: absolute;
-    max-width: 700px;
+    max-width: 1000px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     z-index: 2;
+    margin-top:12.5%;
+    padding: 30px;
+    border-radius: 20px;
+    box-shadow: 5px 5px rgba(0, 0, 0, .5);
+    background-color: rgba(194, 192, 159, 0.603);
 }
-
+.owl-prev, .owl-next{
+    display: none;
+}
+.carousel-text h5{
+    font-size: 1em;
+    color: black;
+    padding: 4px;
+}
 .carousel .carousel-text h2 {
     text-align: center;
-    color: #f0b400;
+    padding: 4px;
+    color: #000082;
     font-weight: 700;
     margin-top:0%;
+}
+.carousel-text li{
+    padding-top: 4px;
 }
 .carousel .carousel-btn .btn.btn-custom {
     color: #ffffff;
@@ -367,13 +488,15 @@ a:focus {
     margin-right: 15px;
 }
 
-@media (max-width: 991.98px) {
-    .carousel .carousel-text h1 {
-        font-size: 35px;
+@media (max-width: 1200px) {
+    .top-bar{
+        display: none;
     }
-    
-    .carousel .carousel-text p {
-        font-size: 16px;
+    .carousel .carousel-text h2 {
+        font-size: 30px;
+    }
+    .carousel .carousel-text h5 {
+        font-size: 15px;
     }
     
     .carousel .carousel-text .btn {
@@ -381,30 +504,189 @@ a:focus {
         font-size: 15px;
         letter-spacing: 0;
     }
+    
+    .carousel .carousel-item {
+        position: relative;
+        width: 100%;
+        min-height: 300px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .carousel .carousel-text {
+        position: absolute;
+        max-width: 900px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        z-index: 2;
+        margin-top:16%;
+        padding: 15px;
+        border-radius: 10px;
+        box-shadow: 5px 5px rgba(0, 0, 0, .5);
+        background-color: rgba(194, 192, 159, 0.603);
+    }
+}
+@media (max-width: 991.98px) {
+    .top-bar{
+        display: none;
+    }
+    .carousel .carousel-text h2 {
+        font-size: 22px;
+    }
+    .carousel .carousel-text h5 {
+        font-size: 15px;
+    }
+    
+    .carousel .carousel-text .btn {
+        padding: 12px 30px;
+        font-size: 15px;
+        letter-spacing: 0;
+    }
+        
+    .carousel .carousel-item {
+        position: relative;
+        width: 100%;
+        min-height: 300px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .carousel .carousel-text {
+        position: absolute;
+        max-width: 700px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        z-index: 2;
+        margin-top:0%;
+        padding: 15px;
+        border-radius: 10px;
+        box-shadow: 5px 5px rgba(0, 0, 0, .5);
+        background-color: rgba(194, 192, 159, 0.603);
+    }
+    
+    .carousel .carousel-img::after {
+        display: none;
+    }
 }
 
 @media (max-width: 767.98px) {
-    .carousel .carousel-text h1 {
-        font-size: 30px;
+    .carousel .carousel-text h2 {
+        font-size: 15px;
     }
-    
+    .carousel .carousel-text h5 {
+        font-size: 13px;
+    }
     .carousel .carousel-text .btn {
         padding: 10px 25px;
         font-size: 15px;
         letter-spacing: 0;
     }
-}
-
-@media (max-width: 575.98px) {
-    .carousel .carousel-text h1 {
-        font-size: 25px;
+    
+    .carousel .carousel-text {
+        position: absolute;
+        max-width: 550px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        z-index: 2;
+        vertical-align:middle;
+        margin-top: -15%;
+        padding: 5px;
+        border-radius: 10px;
+        box-shadow: 5px 5px rgba(0, 0, 0, .5);
     }
     
+    .carousel .carousel-img::after {
+        display: none;
+    }
+}
+
+@media (max-width: 675.98px) {
+    .carousel .carousel-text h2 {
+        font-size: 11px;
+    }
+    .carousel .carousel-text h5 {
+        font-size: 11px;
+        padding:0;
+    }
     .carousel .carousel-text .btn {
-        padding: 8px 20px;
-        font-size: 14px;
+        padding: 0px 10px;
+        font-size: 12px;
         letter-spacing: 0;
     }
+     
+    .carousel .carousel-text {
+        position: absolute;
+        max-width: 500px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        z-index: 2;
+        margin-top:-20%;
+        border-radius: 10px;
+        box-shadow: 5px 5px rgba(0, 0, 0, .5);
+    }
+        
+    .carousel .carousel-img {
+        position: relative;
+        width: 100%;
+        height: auto;
+        text-align: right;
+        overflow: hidden;
+    }
+
+    .carousel .carousel-img::after {
+        display: none;
+    }
+
+}
+
+
+@media (max-width: 575.98px) {
+    .carousel .carousel-text h2 {
+        font-size: 16px;
+    }
+    .carousel .carousel-text h5 {
+        font-size: 14px;
+        padding:0;
+    }
+    .carousel .carousel-text .btn {
+        padding: 0px 10px;
+        font-size: 16px;
+        letter-spacing: 0;
+    }
+    .carousel .carousel-text {
+        position: absolute;
+        max-width: 500px;
+        display: flex;
+        align-items: center;
+        height:max-content;
+        justify-content: center;
+        flex-direction: column;
+        z-index: 2;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        border-radius: 10px;
+        box-shadow: 0px 0px;
+        background-color: rgba(240, 180, 0, .3);
+    }
+        
+    .carousel .carousel-img {
+        display: none;
+    }
+
+    .carousel .carousel-img::after {
+        display: none;
+    }
+
 }
 
 
@@ -459,10 +741,30 @@ a:focus {
 
 @media (max-width: 991.98px) {
     .about .section-header {
-        margin-top: 30px;
+        margin-top: 30%;
+    } 
+    
+    .about .about-img {
+        width: 70%;
+        height: 50vh;
+        text-align: center;
+        margin:0 auto;
+        margin-top: -30%;
     }
 }
 
+@media (max-width: 591.98px) {
+    .about .section-header {
+        margin-top: 20%;
+    } 
+    
+    .about .about-img {
+        width: 70%;
+        height: 50vh;
+        text-align: center;
+        margin:0 auto;
+    }
+}
 
 /*******************************/
 /********* Service CSS *********/
@@ -541,7 +843,7 @@ a:focus {
 .facts {
     position: relative;
     width: 100%;
-    min-height: 400px;
+    min-height: 200px;
     margin: 45px 0;
     display: flex;
     align-items: center;
@@ -598,7 +900,18 @@ a:focus {
     font-weight: 600;
     margin: 0;
 }
-
+@media(max-width:591.98px){
+    .facts {
+        position: relative;
+        width: 100%;
+        min-height: 200px;
+        margin: 118px 0px;
+        display: flex;
+        align-items: center;
+        background: rgba(0, 0, 0, .5);
+    }
+    
+}
 
 /*******************************/
 /*********** Team CSS **********/
