--- a/css/style.css
+++ b/css/style.css
@@ -488,7 +488,7 @@ a:focus {
     margin-right: 15px;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1500px) {
     .top-bar{
         display: none;
     }
@@ -656,7 +656,7 @@ a:focus {
     }
     .carousel .carousel-text h5 {
         font-size: 12px;
-        padding:0;
+        padding:4px;
     }
     .carousel .carousel-text .btn {
         padding: 0px 10px;
