--- a/css/style.css
+++ b/css/style.css
@@ -522,7 +522,7 @@ a:focus {
         justify-content: center;
         flex-direction: column;
         z-index: 2;
-        margin-top:16%;
+      /*   margin-top:16%; */
         padding: 15px;
         border-radius: 10px;
         box-shadow: 5px 5px rgba(0, 0, 0, .5);
