--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,11 @@ a:focus {
     margin-left: 0;
 }
 
-
+.section-header p{
+    font-size: 1.5em;
+    color: #f0b400;
+    font-weight: bold;
+}
 /**********************************/
 /****** Loader & Back to Top ******/
 /**********************************/
@@ -496,7 +500,7 @@ a:focus {
         font-size: 30px;
     }
     .carousel .carousel-text h5 {
-        font-size: 15px;
+        font-size: 16px;
     }
     
     .carousel .carousel-text .btn {
@@ -537,7 +541,7 @@ a:focus {
         font-size: 22px;
     }
     .carousel .carousel-text h5 {
-        font-size: 15px;
+        font-size: 16px;
     }
     
     .carousel .carousel-text .btn {
@@ -563,7 +567,7 @@ a:focus {
         justify-content: center;
         flex-direction: column;
         z-index: 2;
-        margin-top:0%;
+        margin: 0 auto;
         padding: 15px;
         border-radius: 10px;
         box-shadow: 5px 5px rgba(0, 0, 0, .5);
@@ -577,10 +581,10 @@ a:focus {
 
 @media (max-width: 767.98px) {
     .carousel .carousel-text h2 {
-        font-size: 15px;
+        font-size: 22px;
     }
     .carousel .carousel-text h5 {
-        font-size: 13px;
+        font-size: 16px;
     }
     .carousel .carousel-text .btn {
         padding: 10px 25px;
@@ -596,8 +600,7 @@ a:focus {
         justify-content: center;
         flex-direction: column;
         z-index: 2;
-        vertical-align:middle;
-        margin-top: -15%;
+        margin:0 auto;
         padding: 5px;
         border-radius: 10px;
         box-shadow: 5px 5px rgba(0, 0, 0, .5);
@@ -610,10 +613,10 @@ a:focus {
 
 @media (max-width: 675.98px) {
     .carousel .carousel-text h2 {
-        font-size: 11px;
+        font-size: 22px;
     }
     .carousel .carousel-text h5 {
-        font-size: 11px;
+        font-size: 16px;
         padding:0;
     }
     .carousel .carousel-text .btn {
@@ -652,10 +655,10 @@ a:focus {
 
 @media (max-width: 575.98px) {
     .carousel .carousel-text h2 {
-        font-size: 12px;
+        font-size: 22px;
     }
     .carousel .carousel-text h5 {
-        font-size: 12px;
+        font-size: 16px;
         padding:4px;
     }
     .carousel .carousel-text .btn {
@@ -672,12 +675,9 @@ a:focus {
         justify-content: center;
         flex-direction: column;
         z-index: 2;
-        margin-top: 0px;
-        margin-bottom: 0px;
         border-radius: 10px;
         box-shadow: 0px 0px;
-        background-color: rgba(240, 180, 0, .3);
-    }
+    }/* 
         
     .carousel .carousel-img {
         display: none;
@@ -685,11 +685,99 @@ a:focus {
 
     .carousel .carousel-img::after {
         display: none;
-    }
+    } */
 
 }
 
 
+
+/*******************************/
+/******* Testimonial CSS *******/
+/*******************************/
+.testimonial {
+    position: relative;
+    width: 100%;
+    padding: 45px 0;
+}
+
+.testimonial .testimonials-carousel {
+    position: relative;
+    width: calc(100% + 30px);
+    margin: 0 -15px;
+}
+
+.testimonial .testimonial-item {
+    position: relative;
+    width: 100%;
+    padding: 0 15px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.testimonial .testimonial-profile {
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+    border-bottom: 1px solid rgba(0, 0, 0, .1);
+}
+
+.testimonial .testimonial-profile img {
+    width: 80px;
+    height: 80px;
+    margin-bottom: -1px;
+}
+
+.testimonial .testimonial-name {
+    padding-left: 15px;
+    width: calc(100% - 95px);
+}
+
+.testimonial .testimonial-name h3 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+
+.testimonial .testimonial-name p {
+    margin: 0;
+    font-style: italic;
+}
+
+.testimonial .testimonial-text p {
+    margin: 0;
+    padding: 5px;
+}
+
+.testimonial .testimonial-text .exp{
+    overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   -webkit-line-clamp: 3; /* number of lines to show */
+   -webkit-box-orient: vertical;
+}
+
+.testimonial .testimonial-text:hover .exp{
+   display: block;
+}
+
+.testimonial .owl-dots {
+    margin-top: 15px;
+    text-align: center;
+}
+
+.testimonial .owl-dot {
+    display: inline-block;
+    margin: 0 5px;
+    width: 12px;
+    height: 12px;
+    border-radius: 0;
+    background: #FDBE33;
+}
+
+.testimonial .owl-dot.active {
+    background: #20212B;
+}
 
 /*******************************/
 /********** About CSS **********/
@@ -745,11 +833,12 @@ a:focus {
     } 
     
     .about .about-img {
-        width: 90%;
+        width: 70%;
         height: 50vh;
         text-align: center;
         margin:0 auto;
-        margin-top: -30%;
+        margin-bottom: 10%;
+        margin-top: -25%;
     }
 }
 
@@ -759,10 +848,12 @@ a:focus {
     } 
     
     .about .about-img {
-        width: 90%;
+        width: 70%;
         height: 50vh;
         text-align: center;
         margin:0 auto;
+        margin-top: -25%;
+        margin-bottom: 10%;
     }
 }
 
@@ -847,7 +938,7 @@ a:focus {
     margin: 45px 0;
     display: flex;
     align-items: center;
-    background: rgba(0, 0, 0, .5);
+    background-image: url("/img/home1.png");
 }
 
 .facts .facts-item {
@@ -904,11 +995,9 @@ a:focus {
     .facts {
         position: relative;
         width: 100%;
-        min-height: 200px;
-        margin: 118px 0px;
         display: flex;
         align-items: center;
-        background: rgba(0, 0, 0, .5);
+        background-image: url("/img/home1.png");
     }
     
 }
@@ -1113,180 +1202,6 @@ a:focus {
     .event .event-text::after {
         display: none;
     }
-}
-
-
-
-/**********************************/
-/*********** Sidebar CSS **********/
-/**********************************/
-.sidebar {
-    position: relative;
-    width: 100%;
-}
-
-@media(max-width: 991.98px) {
-    .sidebar {
-        margin-top: 45px;
-    }
-}
-
-.sidebar .sidebar-widget {
-    position: relative;
-    margin-bottom: 45px;
-}
-
-.sidebar .sidebar-widget .widget-title {
-    position: relative;
-    margin-bottom: 30px;
-    padding-bottom: 5px;
-    font-size: 25px;
-    font-weight: 700;
-}
-
-.sidebar .sidebar-widget .widget-title::after {
-    position: absolute;
-    content: "";
-    width: 60px;
-    height: 2px;
-    bottom: 0;
-    left: 0;
-    background: #FDBE33;
-}
-
-.sidebar .sidebar-widget .search-widget {
-    position: relative;
-}
-
-.sidebar .search-widget input {
-    height: 50px;
-    border: 1px solid #dddddd;
-    border-radius: 0;
-}
-
-.sidebar .search-widget input:focus {
-    box-shadow: none;
-    border-color: #FDBE33;
-}
-
-.sidebar .search-widget .btn {
-    position: absolute;
-    top: 6px;
-    right: 15px;
-    height: 40px;
-    padding: 0;
-    font-size: 25px;
-    color: #FDBE33;
-    background: none;
-    border-radius: 0;
-    border: none;
-    transition: .3s;
-}
-
-.sidebar .search-widget .btn:hover {
-    color: #4a4c70;
-}
-
-.sidebar .sidebar-widget .recent-post {
-    position: relative;
-}
-
-.sidebar .sidebar-widget .tab-post {
-    position: relative;
-}
-
-.sidebar .tab-post .nav.nav-pills .nav-link {
-    color: #4a4c70;
-    background: #FDBE33;
-    border-radius: 0;
-}
-
-.sidebar .tab-post .nav.nav-pills .nav-link:hover,
-.sidebar .tab-post .nav.nav-pills .nav-link.active {
-    color: #FDBE33;
-    background: #4a4c70;
-}
-
-.sidebar .tab-post .tab-content {
-    padding: 15px 0 0 0;
-    background: transparent;
-}
-
-.sidebar .tab-post .tab-content .container {
-    padding: 0;
-}
-
-.sidebar .sidebar-widget .category-widget {
-    position: relative;
-}
-
-.sidebar .category-widget ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-
-.sidebar .category-widget ul li {
-    margin: 0 0 12px 22px; 
-}
-
-.sidebar .category-widget ul li:last-child {
-    margin-bottom: 0; 
-}
-
-.sidebar .category-widget ul li a {
-    display: inline-block;
-    line-height: 23px;
-}
-
-.sidebar .category-widget ul li::before {
-    position: absolute;
-    content: '\f105';
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    color: #FDBE33;
-    left: 1px;
-}
-
-.sidebar .category-widget ul li span {
-    display: inline-block;
-}
-
-.sidebar .sidebar-widget .tag-widget {
-    position: relative;
-    margin: -5px -5px;
-}
-
-.single .tag-widget a {
-    margin: 5px;
-    display: inline-block;
-    padding: 7px 15px;
-    font-size: 14px;
-    font-weight: 500;
-    color: #4a4c70;
-    border: 1px solid #4a4c70;
-    border-radius: 0;
-}
-
-.single .tag-widget a:hover {
-    color: #ffffff;
-    background: #FDBE33;
-    border-color: #FDBE33;
-}
-
-.sidebar .image-widget {
-    display: block;
-    width: 100%;
-    overflow: hidden;
-}
-
-.sidebar .image-widget img {
-    max-width: 100%;
-    transition: .3s;
-}
-
-.sidebar .image-widget img:hover {
-    transform: scale(1.1);
 }
 
 
