--- a/css/style.css
+++ b/css/style.css
@@ -1211,6 +1211,7 @@ a:focus {
 .footer {
     position: relative;
     margin-top: 45px;
+    margin-bottom: -45px;
     padding-top: 90px;
     background: #000082;
 }
