--- a/css/style.css
+++ b/css/style.css
@@ -368,7 +368,7 @@ a:focus {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 15%;
+        width: 20%;
     }
 }
 
@@ -392,7 +392,7 @@ a:focus {
         display: block;
         margin-left: auto;
         margin-right: auto;
-        width: 15%;
+        width: 20%;
     }
 }
 
@@ -528,6 +528,7 @@ a:focus {
         z-index: 2;
       /*   margin-top:16%; */
         padding: 15px;
+        text-align:center;
         border-radius: 10px;
         box-shadow: 5px 5px rgba(0, 0, 0, .5);
         background-color: rgba(194, 192, 159, 0.603);
@@ -567,6 +568,7 @@ a:focus {
         justify-content: center;
         flex-direction: column;
         z-index: 2;
+        text-align:center;
         margin: 0 auto;
         padding: 15px;
         border-radius: 10px;
@@ -601,7 +603,7 @@ a:focus {
         flex-direction: column;
         z-index: 2;
         margin:0 auto;
-        padding: 5px;
+        text-align:center;
         border-radius: 10px;
         box-shadow: 5px 5px rgba(0, 0, 0, .5);
     }
@@ -633,6 +635,7 @@ a:focus {
         justify-content: center;
         flex-direction: column;
         z-index: 2;
+        text-align:center;
         margin-top:-20%;
         border-radius: 10px;
         box-shadow: 5px 5px rgba(0, 0, 0, .5);
@@ -655,10 +658,10 @@ a:focus {
 
 @media (max-width: 575.98px) {
     .carousel .carousel-text h2 {
-        font-size: 22px;
+        font-size: 16px;
     }
     .carousel .carousel-text h5 {
-        font-size: 16px;
+        font-size: 13px;
         padding:4px;
     }
     .carousel .carousel-text .btn {
@@ -674,6 +677,7 @@ a:focus {
         height:max-content;
         justify-content: center;
         flex-direction: column;
+        text-align:center;
         z-index: 2;
         border-radius: 10px;
         box-shadow: 0px 0px;
@@ -833,27 +837,55 @@ a:focus {
     } 
     
     .about .about-img {
-        width: 70%;
+        width: 80%;
         height: 50vh;
         text-align: center;
         margin:0 auto;
-        margin-bottom: 10%;
-        margin-top: -25%;
+        margin-bottom: 30%;
+        margin-top: 0%;
+    }
+}
+@media (max-width: 791.98px) {
+    .about .section-header {
+        margin-top: 30%;
+    } 
+    
+    .about .about-img {
+        width: 80%;
+        height: 50vh;
+        text-align: center;
+        margin:0 auto;
+        margin-bottom: 16%;
+        margin-top: -13%;
     }
 }
 
+@media (max-width: 731.98px) {
+    .about .section-header {
+        margin-top: 20%;
+    } 
+    
+    .about .about-img {
+        width: 80%;
+        height: 50vh;
+        text-align: center;
+        margin:0 auto;
+        margin-top: -23%;
+        margin-bottom: 20%;
+    }
+}
 @media (max-width: 591.98px) {
     .about .section-header {
         margin-top: 20%;
     } 
     
     .about .about-img {
-        width: 70%;
+        width: 80%;
         height: 50vh;
         text-align: center;
         margin:0 auto;
-        margin-top: -25%;
-        margin-bottom: 10%;
+        margin-top: -30%;
+        margin-bottom: 23%;
     }
 }
 
