--- a/css/style.css
+++ b/css/style.css
@@ -659,10 +659,12 @@ a:focus {
 @media (max-width: 575.98px) {
     .carousel .carousel-text h2 {
         font-size: 16px;
+        color: #f0b400;
     }
     .carousel .carousel-text h5 {
         font-size: 13px;
         padding:4px;
+        color:silver;
     }
     .carousel .carousel-text .btn {
         padding: 0px 10px;
@@ -681,7 +683,8 @@ a:focus {
         z-index: 2;
         border-radius: 10px;
         box-shadow: 0px 0px;
-    }/* 
+        background-color: #000082;
+    }
         
     .carousel .carousel-img {
         display: none;
@@ -689,7 +692,7 @@ a:focus {
 
     .carousel .carousel-img::after {
         display: none;
-    } */
+    } 
 
 }
 
@@ -876,16 +879,11 @@ a:focus {
 }
 @media (max-width: 591.98px) {
     .about .section-header {
-        margin-top: 20%;
+        margin-top: -30%;
     } 
     
     .about .about-img {
-        width: 80%;
-        height: 50vh;
-        text-align: center;
-        margin:0 auto;
-        margin-top: -30%;
-        margin-bottom: 23%;
+        display: none;
     }
 }
 
