--- a/css/style.css
+++ b/css/style.css
@@ -681,8 +681,8 @@ a:focus {
         flex-direction: column;
         text-align:center;
         z-index: 2;
-        padding:0;
-        margin:0;
+        padding:5px;
+        margin:10px;
         border-radius: 10px;
         box-shadow: 0px 0px;
         background-color: #000082;
@@ -697,7 +697,11 @@ a:focus {
         display: none;
         margin:0;
     } 
-
+        
+    .carousel .carousel-img img {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 
