--- a/css/style.css
+++ b/css/style.css
@@ -683,6 +683,7 @@ a:focus {
         z-index: 2;
         padding:5px;
         margin:10px;
+        margin-top: -100px;
         border-radius: 10px;
         box-shadow: 0px 0px;
         background-color: #000082;
@@ -701,6 +702,8 @@ a:focus {
     .carousel .carousel-img img {
         width: 100%;
         height: 100%;
+        margin: 0;
+        object-fit:none;
     }
 }
 
