--- a/css/style.css
+++ b/css/style.css
@@ -845,32 +845,34 @@ a:focus {
     padding: 0;
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 1200.98px) {
     .about .section-header {
-        margin-top: 30%;
+        margin-top: 0%;
     } 
     
     .about .about-img {
-        width: 80%;
-        height: 50vh;
-        text-align: center;
-        margin:0 auto;
-        margin-bottom: 30%;
+        margin:0;
+        width: 100%;
+        height: 40vh;
+        display: flex;
+    }
+}
+@media (max-width: 991.98px) {
+    .about .section-header {
         margin-top: 0%;
+    } 
+    
+    .about .about-img {
+        display: none;
     }
 }
 @media (max-width: 791.98px) {
     .about .section-header {
-        margin-top: 30%;
+        margin-top: -10%;
     } 
     
     .about .about-img {
-        width: 80%;
-        height: 50vh;
-        text-align: center;
-        margin:0 auto;
-        margin-bottom: 16%;
-        margin-top: -13%;
+        display: none;
     }
 }
 
@@ -880,12 +882,7 @@ a:focus {
     } 
     
     .about .about-img {
-        width: 80%;
-        height: 50vh;
-        text-align: center;
-        margin:0 auto;
-        margin-top: -23%;
-        margin-bottom: 20%;
+        display:none;
     }
 }
 @media (max-width: 591.98px) {
