--- a/css/style.css
+++ b/css/style.css
@@ -853,7 +853,7 @@ a:focus {
     .about .about-img {
         margin:0;
         width: 100%;
-        height: 40vh;
+        height: 50%;
         display: flex;
     }
 }
