--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 body {
     color: #777777;
     font-weight: 500;
-    background: rgba(0, 0, 0, .1);
+    background: white;
     font-family: 'Quicksand', sans-serif;
 }
 /* 
