--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 /********* General CSS *********/
 /*******************************/
 body {
-    color: #777777;
+    color:black;
     font-weight: 500;
     background: white;
     font-family: 'Quicksand', sans-serif;
