--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,10 @@
 /********* General CSS *********/
 /*******************************/
 body {
-    color: #777777;
+    color:black;
     font-weight: 500;
     background: white;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'helvetica', sans-serif;
 }
 /* 
 h1,
@@ -403,9 +403,8 @@ a:focus {
 .carousel {
     position: relative;
     width: 100%;
-    min-height: 300px;
+    min-height: 40%;
     background: #ffffff;
-    margin-bottom: 45px;
 }
 
 .carousel .container-fluid {
@@ -415,7 +414,7 @@ a:focus {
 .carousel .carousel-item {
     position: relative;
     width: 100%;
-    min-height: 300px;
+    min-height: 40%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -426,7 +425,7 @@ a:focus {
     position: relative;
     width: 100%;
     height: 100%;
-    min-height: 400px;
+    min-height: 40%;
     text-align: right;
     overflow: hidden;
 }
@@ -451,35 +450,29 @@ a:focus {
 
 .carousel .carousel-text {
     position: absolute;
-    max-width: 1000px;
+    max-width: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align:center;
     flex-direction: column;
     z-index: 2;
-    margin-top:12.5%;
-    padding: 30px;
-    border-radius: 20px;
-    box-shadow: 5px 5px rgba(0, 0, 0, .5);
-    background-color: rgba(194, 192, 159, 0.603);
 }
 .owl-prev, .owl-next{
     display: none;
 }
 .carousel-text h5{
-    font-size: 1em;
-    color: black;
+    border:1 solid white;
+    font-size:2em;
+    color: white;
     padding: 4px;
 }
 .carousel .carousel-text h2 {
     text-align: center;
     padding: 4px;
-    color: #000082;
+    color: #f0b400;
     font-weight: 700;
     margin-top:0%;
-}
-.carousel-text li{
-    padding-top: 4px;
 }
 .carousel .carousel-btn .btn.btn-custom {
     color: #ffffff;
@@ -489,10 +482,10 @@ a:focus {
     color: #20212B;
 }
 
-.carousel .carousel-btn .btn:first-child {
+/* .carousel .carousel-btn .btn:first-child {
     margin-right: 15px;
 }
-
+ */
 @media (max-width: 1500px) {
     .top-bar{
         display: none;
@@ -504,36 +497,6 @@ a:focus {
         font-size: 16px;
     }
     
-    .carousel .carousel-text .btn {
-        padding: 12px 30px;
-        font-size: 15px;
-        letter-spacing: 0;
-    }
-    
-    .carousel .carousel-item {
-        position: relative;
-        width: 100%;
-        min-height: 300px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
-    .carousel .carousel-text {
-        position: absolute;
-        max-width: 900px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        z-index: 2;
-      /*   margin-top:16%; */
-        padding: 15px;
-        text-align:center;
-        border-radius: 10px;
-        box-shadow: 5px 5px rgba(0, 0, 0, .5);
-        background-color: rgba(194, 192, 159, 0.603);
-    }
 }
 @media (max-width: 991.98px) {
     .top-bar{
@@ -545,169 +508,7 @@ a:focus {
     .carousel .carousel-text h5 {
         font-size: 16px;
     }
-    
-    .carousel .carousel-text .btn {
-        padding: 12px 30px;
-        font-size: 15px;
-        letter-spacing: 0;
-    }
-        
-    .carousel .carousel-item {
-        position: relative;
-        width: 100%;
-        min-height: 300px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
-    .carousel .carousel-text {
-        position: absolute;
-        max-width: 700px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        z-index: 2;
-        text-align:center;
-        margin: 0 auto;
-        padding: 15px;
-        border-radius: 10px;
-        box-shadow: 5px 5px rgba(0, 0, 0, .5);
-        background-color: rgba(194, 192, 159, 0.603);
-    }
-    
-    .carousel .carousel-img::after {
-        display: none;
-    }
 }
-
-@media (max-width: 767.98px) {
-    .carousel .carousel-text h2 {
-        font-size: 22px;
-    }
-    .carousel .carousel-text h5 {
-        font-size: 16px;
-    }
-    .carousel .carousel-text .btn {
-        padding: 10px 25px;
-        font-size: 15px;
-        letter-spacing: 0;
-    }
-    
-    .carousel .carousel-text {
-        position: absolute;
-        max-width: 550px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        z-index: 2;
-        margin:0 auto;
-        text-align:center;
-        border-radius: 10px;
-        box-shadow: 5px 5px rgba(0, 0, 0, .5);
-    }
-    
-    .carousel .carousel-img::after {
-        display: none;
-    }
-}
-
-@media (max-width: 675.98px) {
-    .carousel .carousel-text h2 {
-        font-size: 22px;
-    }
-    .carousel .carousel-text h5 {
-        font-size: 16px;
-        padding:0;
-    }
-    .carousel .carousel-text .btn {
-        padding: 0px 10px;
-        font-size: 12px;
-        letter-spacing: 0;
-    }
-     
-    .carousel .carousel-text {
-        position: absolute;
-        max-width: 500px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        z-index: 2;
-        text-align:center;
-        margin-top:-20%;
-        border-radius: 10px;
-        box-shadow: 5px 5px rgba(0, 0, 0, .5);
-    }
-        
-    .carousel .carousel-img {
-        position: relative;
-        width: 100%;
-        height: auto;
-        text-align: right;
-        overflow: hidden;
-    }
-
-    .carousel .carousel-img::after {
-        display: none;
-    }
-
-}
-
-
-@media (max-width: 575.98px) {
-    .carousel .carousel-text h2 {
-        font-size: 22px;
-        color: #f0b400;
-    }
-    .carousel .carousel-text h5 {
-        font-size: 16px;
-        padding:2px;
-        color:silver;
-    }
-    .carousel .carousel-text .btn {
-        padding: 0px 10px;
-        font-size: 12px;
-        letter-spacing: 0;
-    }
-    .carousel .carousel-text {
-        position: absolute;
-        max-width: 450px;
-        display: flex;
-        align-items: center;
-        height:max-content;
-        justify-content: center;
-        flex-direction: column;
-        text-align:center;
-        z-index: 2;
-        padding:5px;
-        margin:10px;
-        margin-top: -70px;
-        border-radius: 10px;
-        box-shadow: 0px 0px;
-        background-color: #000082;
-    }
-        
-    .carousel .carousel-img {
-        display: none;
-        margin:0;
-    }
-
-    .carousel .carousel-img::after {
-        display: none;
-        margin:0;
-    } 
-        
-    .carousel .carousel-img img {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        object-fit:none;
-    }
-}
-
 
 
 /*******************************/
@@ -791,11 +592,11 @@ a:focus {
     width: 12px;
     height: 12px;
     border-radius: 0;
-    background: #FDBE33;
+    background: #f0b400;
 }
 
 .testimonial .owl-dot.active {
-    background: #20212B;
+    background: #000082;
 }
 
 /*******************************/
@@ -804,14 +605,17 @@ a:focus {
 .about {
     position: relative;
     width: 100%;
-    padding: 45px 0;
+    padding-top: 5%;
 }
 
 .about .section-header {
-    margin-bottom: 30px;
+    margin-bottom: 4%;
     margin-left: 0;
 }
-
+.about .section-header p{
+    font-size: 1em;
+    margin-bottom: 0;
+}
 .about .about-img {
     width: 100%;
     height: 100vh;
@@ -822,7 +626,7 @@ a:focus {
 }
 
 .about .about-tab .nav.nav-pills .nav-link {
-    padding: 8px;
+    padding: 5%;
     font-weight: 600;
     background: none;
     border-radius: 0;
@@ -832,25 +636,21 @@ a:focus {
 
 .about .about-tab .nav.nav-pills .nav-link:hover,
 .about .about-tab .nav.nav-pills .nav-link.active {
-    color: #FDBE33;
+    color: #f0b400;
     padding-bottom: 7px;
-    border-bottom: 3px solid #FDBE33;
+    border-bottom: 3px solid #f0b400;
 }
 
 .about .about-tab .tab-content {
-    padding: 15px 0 0 0;
+    padding: 5% 0 0 0;
     background: transparent;
 }
 
 .about .about-tab .tab-content .container {
     padding: 0;
-}
+} 
 
 @media (max-width: 1200.98px) {
-    .about .section-header {
-        margin-top: 0%;
-    } 
-    
     .about .about-img {
         margin:0;
         width: 100%;
@@ -858,41 +658,13 @@ a:focus {
         display: flex;
     }
 }
-@media (max-width: 991.98px) {
-    .about .section-header {
-        margin-top: 0%;
-    } 
-    
-    .about .about-img {
-        display: none;
-    }
-}
-@media (max-width: 791.98px) {
-    .about .section-header {
-        margin-top: -10%;
-    } 
-    
-    .about .about-img {
-        display: none;
-    }
-}
 
-@media (max-width: 731.98px) {
-    .about .section-header {
-        margin-top: 20%;
-    } 
-    
+@media (max-width: 991.98px) {
     .about .about-img {
-        display:none;
-    }
-}
-@media (max-width: 591.98px) {
-    .about .section-header {
-        margin-top: -45%;
-    } 
-    
-    .about .about-img {
-        display: none;
+        margin:0 auto;
+        width: 70%;
+        height: 70%;
+        margin-bottom: 5%;  
     }
 }
 
@@ -902,7 +674,6 @@ a:focus {
 .service {
     position: relative;
     width: 100%;
-    padding: 45px 0 15px 0;
 }
 
 .service .service-item {
@@ -910,7 +681,7 @@ a:focus {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 45px;
+    margin-bottom: 15%;
     transition: .3s;
 }
 
@@ -955,14 +726,16 @@ a:focus {
 }
 
 .service .service-text h3 {
-    margin-bottom: 10px;
-    font-size: 22px;
+    margin-bottom: 5%;
+    font-size: 1em;
     font-weight: 700;
     letter-spacing: 1px;
+    color: #000082;
 }
 
 .service .service-text p {
     margin: 0;
+    color: #000082;
 }
 
 
@@ -973,35 +746,36 @@ a:focus {
 .facts {
     position: relative;
     width: 100%;
-    min-height: 200px;
-    margin: 45px 0;
+    min-height: 25%;
+    margin: 3% 0;
     display: flex;
     align-items: center;
     background-color: #000082;
+    padding-bottom: 5%;
 }
 
 .facts .facts-item {
     display: flex;
     flex-direction: row;
-    margin: 25px 0;
+    margin: 7% 0;
 }
 
 .facts .facts-item i {
-    margin-top: 10px;
-    font-size: 60px;
-    line-height: 60px;
+    margin-top: 2%;
+    font-size: 400%;
+    line-height: 100%;
     color: #FDBE33;
 }
 
 .facts .facts-text {
-    padding-left: 20px;
+    padding-left: 8%;
 }
 
 .facts .facts-text h3 {
     position: relative;
     display: inline-block;
     color: #ffffff;
-    font-size: 45px;
+    font-size: 2em;
     font-weight: 700;
 }
 
@@ -1009,7 +783,7 @@ a:focus {
     position: absolute;
     top: 0px;
     color: #ffffff;
-    font-size: 25px;
+    font-size: 70%;
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
 }
@@ -1029,6 +803,10 @@ a:focus {
     font-size: 22px;
     font-weight: 600;
     margin: 0;
+}
+.facts .section-header p{
+    margin-top: 5%;
+    margin-bottom: 2%;
 }
 @media(max-width:591.98px){
     .facts {
