--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,10 @@ a:focus {
     text-align: center; 
    font-size: 16px;
     font-weight: 500;
-    color: black;
+    color: #f0b400;
     border-radius: 0;
-    border: 2px solid #FDBE33;
-    box-shadow: inset 0 0 0 0 #FDBE33;
+    border: 2px solid #f0b400;
+    box-shadow: inset 0 0 0 0 #F0b400;
     transition: ease-out 0.3s;
     -webkit-transition: ease-out 0.3s;
     -moz-transition: ease-out 0.3s;
@@ -624,6 +624,7 @@ a:focus {
 .about .about-img {
     width: 100%;
     height: 100vh;
+    margin-top: 5%;
 }
 
 .about .about-tab {
@@ -1052,7 +1053,7 @@ a:focus {
 .footer {
     position: relative;
     margin-top: 45px;
-    margin-bottom: -45px;
+    margin-bottom: -90px;
     padding-top: 90px;
     background: #000082;
 }
