--- a/css/style.css
+++ b/css/style.css
@@ -420,10 +420,10 @@ a:focus {
     position: relative;
     width: 100%;
     min-height: 40%;
-    display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    display: flex;
+    flex-direction: column; 
 }
 
 .carousel .carousel-img {
@@ -433,8 +433,10 @@ a:focus {
     min-height: 40%;
     text-align: right;
     overflow: hidden;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
-
+/* 
 .carousel .carousel-img::after {
     position: absolute;
     content: "";
@@ -446,11 +448,11 @@ a:focus {
     z-index: 1;
     display: none;
 }
-
+ */
 .carousel .carousel-img img {
     width: 100%;
     height: 100%;
-    object-fit:cover;
+    object-fit:cover; 
 }
 
 .carousel .carousel-text {
