--- a/css/style.css
+++ b/css/style.css
@@ -917,7 +917,6 @@ a:focus {
 .event {
     position: relative;
     width: 100%;
-    margin-bottom: 5%;
     padding: 2% 0 2% 0;
 }
 
@@ -1014,12 +1013,16 @@ a:focus {
     margin-top: 20px;
     padding: 8px 30px;
 }
-
+.event .col-lg-6{
+    margin-bottom: 3%;
+}
 @media (max-width: 575.98px) {
     .event .event-content {
         flex-direction: column;
     }
-    
+    .event .col-lg-6{
+        margin: 3%;
+    }
     .event .event-meta {
         flex-direction: row;
     }
@@ -1046,6 +1049,73 @@ a:focus {
     .event .event-text::after {
         display: none;
     }
+}
+
+
+
+/*******************************/
+/********** Causes CSS *********/
+/*******************************/
+.causes {
+    position: relative;
+    width: 100%;
+    padding: 5% 0;
+}
+
+.causes .causes-carousel {
+    width: calc(100% + 30px);
+    margin-left: -15px;
+    margin-right: -15px;
+}
+
+.causes .causes-item {
+    margin: 0 5%;
+    overflow: hidden;
+    background: #f3f6ff;
+}
+
+.causes .causes-img {
+    overflow: hidden;
+}
+
+.causes .causes-img img {
+    width: 100%;
+    transition: .3s;
+}
+
+.causes .causes-item:hover img {
+    transform: scale(1.1);
+}
+
+.causes .causes-text h5{
+    font-weight: 600;
+    font-size: 1em;
+    text-align:center;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    background-color: #000082;
+    color: #f0b400;
+}
+
+.causes .causes-text p{
+    font-size: 0.9em;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding:3%;
+}
+.causes .causes-text p{
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 12; /* number of lines to show */
+    -webkit-box-orient: vertical;
+}
+
+.causes .causes-text p:hover{
+    display: block;
+}
+
+.causes .section-header{
+    margin-bottom: 3%;
 }
 
 
